--- a/src/SFA.Apprenticeships.Web.Raa.Common/packages.config
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
+  <package id="CsvHelper" version="2.16.0.0" targetFramework="net451" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net451" />
