--- a/src/SFA.Apprenticeships.Application.Reporting/SFA.Apprenticeships.Application.Reporting.csproj
+++ b/src/SFA.Apprenticeships.Application.Reporting/SFA.Apprenticeships.Application.Reporting.csproj
@@ -102,6 +102,10 @@
       <Project>{e3f2f285-16eb-49c5-9668-8d8e1db6c610}</Project>
       <Name>SFA.Apprenticeships.Domain.Entities.Raa</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Domain.Raa.Interfaces\SFA.Apprenticeships.Domain.Raa.Interfaces.csproj">
+      <Project>{cf497dd1-550d-4203-8fbf-c0a3b0109d2b}</Project>
+      <Name>SFA.Apprenticeships.Domain.Raa.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
