US2029: consolidated applicant Id in presenter

--- a/src/SFA.Apprenticeships.Infrastructure.Presentation/SFA.Apprenticeships.Infrastructure.Presentation.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Presentation/SFA.Apprenticeships.Infrastructure.Presentation.csproj
@@ -88,6 +88,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AddressPresenter.cs" />
+    <Compile Include="ApplicantIdPresenter.cs" />
     <Compile Include="Constants\Wages.cs" />
     <Compile Include="CsvPresenter.cs" />
     <Compile Include="DatePresenter.cs" />
