--- a/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
+++ b/src/SFA.Apprenticeships.Application.Employer/SFA.Apprenticeships.Application.Employer.csproj
@@ -86,6 +86,10 @@
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -106,7 +110,9 @@
     <Compile Include="Strategies\IGetByIdStrategy.cs" />
     <Compile Include="Strategies\IGetPagedEmployerSearchResultsStrategy.cs" />
     <Compile Include="Strategies\ISaveEmployerStrategy.cs" />
+    <Compile Include="Strategies\ISendEmployerLinksStrategy.cs" />
     <Compile Include="Strategies\SaveEmployerStrategy.cs" />
+    <Compile Include="Strategies\SendEmployerLinksStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
