--- a/src/SFA.Apprenticeships.Application.Employer/packages.config
+++ b/src/SFA.Apprenticeships.Application.Employer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
 </packages>
