--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -15,6 +15,7 @@
     <add key="ida:SessionTimeout" value="60" />
     <add key="CdnUrl" value="//az693499.vo.msecnd.net" />
     <add key="vs:EnableBrowserLink" value="false" />
+    <add key="aspnetspell_key" value="TINYMCE-SPELL.P2AR0HVFQ21ME9V115.UUUMY.6L802UNJJ.01A08.D4V6V.ENT1WEB2INTRANET " />
   </appSettings>
   <system.web>
     <authentication mode="None" />
