--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -349,6 +349,7 @@
     <Compile Include="Controllers\AgencyUserController.cs" />
     <Compile Include="Controllers\CandidateController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\InformationRadiatorController.cs" />
     <Compile Include="Controllers\ManagementControllerBase.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\VacancyController.cs" />
@@ -371,6 +372,9 @@
     <Compile Include="Mediators\Candidate\CandidateMediator.cs" />
     <Compile Include="Mediators\Candidate\CandidateMediatorCodes.cs" />
     <Compile Include="Mediators\Candidate\ICandidateMediator.cs" />
+    <Compile Include="Mediators\InformationRadiator\IInformationRadiatorMediator.cs" />
+    <Compile Include="Mediators\InformationRadiator\InformationRadiatorMediator.cs" />
+    <Compile Include="Mediators\InformationRadiator\InformationRadiatorMediatorCodes.cs" />
     <Compile Include="Mediators\Reporting\IReportingMediator.cs" />
     <Compile Include="Mediators\Reporting\ReportingMediator.cs" />
     <Compile Include="Mediators\Reporting\ReportingMediatorCodes.cs" />
@@ -394,6 +398,7 @@
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\CandidateApprenticeshipApplicationViewModel.cs" />
     <Compile Include="ViewModels\CandidateTraineeshipApplicationViewModel.cs" />
+    <Compile Include="ViewModels\InformationRadiatorViewModel.cs" />
     <Compile Include="ViewModels\ReportMenu.cs" />
     <Compile Include="ViewModels\ReportUnsuccessfulCandidatesParameters.cs" />
     <Compile Include="ViewModels\ReportSuccessfulCandidatesParameters.cs" />
@@ -839,6 +844,7 @@
     <Content Include="Content\_assets\js\vendor\nanospell\server\license\key.lic" />
     <Content Include="Content\_assets\js\vendor\nanospell\server\license\web.config" />
     <Content Include="Content\_assets\js\vendor\nanospell\server\dictionaries\en_uk.dic" />
+    <Content Include="Views\InformationRadiator\Index.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
