--- a/src/SFA.Apprenticeships.Service.Vacancy.TestLoader/SFA.Apprenticeships.Service.Vacancy.TestLoader.csproj
+++ b/src/SFA.Apprenticeships.Service.Vacancy.TestLoader/SFA.Apprenticeships.Service.Vacancy.TestLoader.csproj
@@ -77,8 +77,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\CsvHelper.2.13.2.0\lib\net40-client\CsvHelper.dll</HintPath>
+      <HintPath>..\packages\CsvHelper.2.16.0.0\lib\net45\CsvHelper.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.4.0.1\lib\net45\NLog.dll</HintPath>
