--- a/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit.EndToEndTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="4.12.0" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.10.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
