Created anonymous layout for anonymous pages.  This introduces an acceptable level of duplication

--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -853,6 +853,7 @@
     <Content Include="Views\Application\ShareApplications.cshtml" />
     <Content Include="Views\Report\CandidatesWithApplications.cshtml" />
     <Content Include="Views\EmployerApplication\ViewAnonymisedTraineeship.cshtml" />
+    <Content Include="Views\Shared\_AnonymousLayout.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
