--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
@@ -3,7 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
   <appSettings>
     <add key="Environment" value="PROD" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="ida:Wtrealm" value="https://recruitapprenticeship.sfa.bis.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ida:Wtrealm" value="https://www.recruit-apprentice.service.gov.uk/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="ida:SessionTimeout" value="60" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
