--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
@@ -10,13 +10,28 @@
   <system.webServer>
     <rewrite xdt:Transform="Insert">
       <rules>
+        <rule name="RedirectOldUrl" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTP_HOST}" matchType="Pattern" pattern="^recruitapprenticeship.sfa.bis.gov.uk$" />
+          </conditions>
+          <action type="Redirect" url="https://www.recruit-apprentice.service.gov.uk/" redirectType="Permanent" />
+        </rule>
+        <rule name="RedirectOldUrl" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTP_HOST}" matchType="Pattern" pattern="^recruitapprentice.trafficmanager.net$" />
+          </conditions>
+          <action type="Redirect" url="https://www.recruit-apprentice.service.gov.uk/" redirectType="Permanent" />
+        </rule>
         <rule name="RedirectToHTTPS" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+            <add input="{HTTP_HOST}" pattern="^recruit-apprentice.service.gov.uk$" />
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
           </conditions>
-          <action type="Redirect" url="https://{SERVER_NAME}/{R:1}" redirectType="Permanent" />
+          <action type="Redirect" url="https://www.recruit-apprentice.service.gov.uk/{R:1}" redirectType="Permanent" />
         </rule>
       </rules>
     </rewrite>
