Fixing duplicate redirect rule

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
@@ -17,7 +17,7 @@
           </conditions>
           <action type="Redirect" url="https://www.recruit-apprentice.service.gov.uk/" redirectType="Permanent" />
         </rule>
-        <rule name="RedirectOldUrl" stopProcessing="true">
+        <rule name="RedirectTrafficManagerUrl" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTP_HOST}" matchType="Pattern" pattern="^recruitapprentice.trafficmanager.net$" />
