Made changes to enable the routing to the re-platformed API.

--- a/src/SFA.WebProxy/Web.config
+++ b/src/SFA.WebProxy/Web.config
@@ -7,12 +7,12 @@
   <appSettings>
     <add key="AreNonPrimaryRequestsEnabled" value="True"/>
     <add key="IsLoggingEnabled" value="True"/>
-    <add key="NasAvWebServiceRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/Services"/>
-    <add key="CompatabilityWebServiceRootUri" value="http://sfa-service-dev.cloudapp.net"/>
+    <add key="NasAvWebServiceRootUri" value="https://apprenticeshipvacancymatchingservice.lsc.gov.uk"/>
+    <add key="CompatabilityWebServiceRootUri" value="https://dev-soapapi.findapprenticeship.service.gov.uk"/>
     <add key="AutomaticRouteToCompatabilityWebServiceRegex" value=""/>
     <add key="FileProxyLoggingRootPath" value="C:\WebProxy"/>
     <add key="AzureStorageConnectionString" value="UseDevelopmentStorage=true"/>
-    <add key="SqlServerConnectionString" value="Data Source=(local)\SQLEXPRESS;Database=Raa;Integrated Security=True;Pooling=False"/>
+    <add key="SqlServerConnectionString" value="Data Source=(local)\SQLEXPRESS;Database=AvmsPlus;Integrated Security=True;Pooling=False"/>
     <add key="CacheDurationInSeconds" value="30"/>
   </appSettings>
   <system.web>
