Fixed reference data provider integration test

--- a/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
@@ -194,6 +194,7 @@
     <Compile Include="VacancySearch\TraineeshipVacancySearchTests.cs" />
     <Compile Include="VacancySearch\SearchConfigurationShould.cs" />
     <Compile Include="VacancySearch\ApprenticeshipVacancySearchTests.cs" />
+    <Compile Include="SourceRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
