--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/packages.config
@@ -12,6 +12,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
   <package id="NUnit" version="3.4.1" targetFramework="net451" />
+  <package id="NUnit.Console" version="3.4.1" targetFramework="net451" />
+  <package id="NUnit.ConsoleRunner" version="3.4.1" targetFramework="net451" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.4.1" targetFramework="net451" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.4.1" targetFramework="net451" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.4.1" targetFramework="net451" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.1" targetFramework="net451" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.4.1" targetFramework="net451" />
   <package id="RazorGenerator.Testing" version="2.3.4" targetFramework="net451" />
   <package id="ReflectionMagic" version="2.1.0" targetFramework="net451" />
 </packages>
