--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Locations\PostalAddress.cs" />
     <Compile Include="Locations\VacancyLocation.cs" />
     <Compile Include="Parties\Employer.cs" />
+    <Compile Include="Parties\MinimalEmployerDetails.cs" />
     <Compile Include="Parties\Provider.cs" />
     <Compile Include="Parties\ProviderSite.cs" />
     <Compile Include="Parties\VacancyParty.cs" />
