--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Providers\VacancyPosting\SubmitVacancyTests.cs" />
     <Compile Include="Providers\VacancyPosting\TestBase.cs" />
     <Compile Include="Providers\VacancyPosting\TrainingDetailsTests.cs" />
+    <Compile Include="Providers\VacancyProvider\DashboardTests.cs" />
     <Compile Include="Providers\VacancyProvider\UpdateRequirementsProspectsViewModelTests.cs" />
     <Compile Include="Providers\VacancyProvider\UpdateFurtherVacancyDetailsViewModelTests.cs" />
     <Compile Include="Providers\VacancyProvider\UpdateTrainingDetailsViewModelTests.cs" />
