--- a/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
+++ b/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
@@ -77,6 +77,14 @@
     <Reference Include="CuttingEdge.Conditions">
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
     </Reference>
+    <Reference Include="StructureMap, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.6.186\lib\net40\StructureMap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StructureMap.Net4, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.6.186\lib\net40\StructureMap.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -88,7 +96,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\VacancyPostingConfiguration.cs" />
+    <Compile Include="IoC\VacancyPostingServiceRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\ArchiveVacancyStrategy.cs" />
+    <Compile Include="Strategies\AuthoriseCurrentUserStrategy.cs" />
+    <Compile Include="Strategies\CreateVacancyStrategy.cs" />
+    <Compile Include="Strategies\GetNextVacancyReferenceNumberStrategy.cs" />
+    <Compile Include="Strategies\GetVacancyStrategies.cs" />
+    <Compile Include="Strategies\GetVacancySummaryStrategies.cs" />
+    <Compile Include="Strategies\IGetVacancySummaryStrategies.cs" />
+    <Compile Include="Strategies\IArchiveVacancyStrategy.cs" />
+    <Compile Include="Strategies\IAuthoriseCurrentUserStrategy.cs" />
+    <Compile Include="Strategies\ICreateVacancyStrategy.cs" />
+    <Compile Include="Strategies\IGetNextVacancyReferenceNumberStrategy.cs" />
+    <Compile Include="Strategies\IGetVacancyStrategies.cs" />
+    <Compile Include="Strategies\IQaVacancyStrategies.cs" />
+    <Compile Include="Strategies\IUpdateVacancyStrategy.cs" />
+    <Compile Include="Strategies\IUpsertVacancyStrategy.cs" />
+    <Compile Include="Strategies\IVacancyLocationsStrategies.cs" />
+    <Compile Include="Strategies\QaVacancyStrategies.cs" />
+    <Compile Include="Strategies\UpdateVacancyStrategy.cs" />
+    <Compile Include="Strategies\UpsertVacancyStrategy.cs" />
+    <Compile Include="Strategies\VacancyLocationsStrategies.cs" />
     <Compile Include="VacancyLockingService.cs" />
     <Compile Include="VacancyPostingService.cs" />
   </ItemGroup>
@@ -118,7 +147,9 @@
       <Name>SFA.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
