Publishing and subscribing to vacancy updates

--- a/src/SFA.Apprenticeships.Infrastructure.Processes/SFA.Apprenticeships.Infrastructure.Processes.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Processes/SFA.Apprenticeships.Infrastructure.Processes.csproj
@@ -204,6 +204,8 @@
     <Compile Include="Vacancies\VacancyAboutToExpireSubscriber.cs" />
     <Compile Include="Vacancies\VacancyEtlMapper.cs" />
     <Compile Include="Vacancies\VacancyStatusProcessorSubscriber.cs" />
+    <Compile Include="Vacancies\ApprenticeshipSummaryUpdateSubscriber.cs" />
+    <Compile Include="Vacancies\TraineeshipsSummaryUpdateSubscriber.cs" />
     <Compile Include="Vacancies\VacancyStatusSummarySubscriber.cs" />
     <Compile Include="Extensions\VacancyStatusSummaryExtensions.cs" />
     <Compile Include="IoC\ProcessesRegistry.cs" />
