--- a/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
+++ b/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
@@ -74,6 +74,14 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="AutoMapper.Net4, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="CuttingEdge.Conditions">
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
     </Reference>
@@ -110,6 +118,7 @@
     <Compile Include="Strategies\ICreateVacancyStrategy.cs" />
     <Compile Include="Strategies\IGetNextVacancyReferenceNumberStrategy.cs" />
     <Compile Include="Strategies\IGetVacancyStrategies.cs" />
+    <Compile Include="Strategies\IPublishVacancySummaryUpdateStrategy.cs" />
     <Compile Include="Strategies\IQaVacancyStrategies.cs" />
     <Compile Include="Strategies\IUpdateVacancyStrategy.cs" />
     <Compile Include="Strategies\IUpsertVacancyStrategy.cs" />
@@ -148,9 +157,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
