--- a/src/SFA.Apprenticeships.Data.Migrate.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Data.Migrate.UnitTests/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
-  <package id="FluentAssertions" version="4.12.0" targetFramework="net451" />
-  <package id="Moq" version="4.5.16" targetFramework="net451" />
+  <package id="FluentAssertions" version="4.13.0" targetFramework="net451" />
+  <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
+  <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Moq" version="4.5.19" targetFramework="net451" />
   <package id="NUnit" version="3.4.1" targetFramework="net451" />
 </packages>
