--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -18,6 +18,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <machineKey configSource="Configs\machineKey.config" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" enableVersionHeader="false" />
     <httpCookies httpOnlyCookies="true" requireSSL="true" />
